# Demo

Node.js/QRCode/: create_qrcode.js
Node.js/QRCode/server/: index.html  server.js
Node.js/blog/: README.md
Python/printer_demo/: printer.py
Python/wxpython_demo/: 01_base.py  02_menu.py  03_menu.py  04_menu.py  05_menu.py  06_toolbar.py  07_toolbar.py  08_sizer.py  09_sizer.py  10_sizer.py  11_sizer.py  12_event.py  13_event.py  14_id.py  15_PaintEvent.py  16_FocusEvent.py  17_KeyEvent.py  18_MouseEvent.py  19_messagebox.py  20_MessageDialog.py  21_about.py  22_FileDialog.py  23_DirDialog.py  24_Dialog.py  25_TextEntryDialog.py  26_SingleChoiceDialog.py  27_MultiChoiceDialog.py  28_button.py  29_CheckBox.py  30_RadioButton.py  31_StaticText.py  32_TextCtrl.py  33_ListBox.py  34_ListCtrl.py  35_TreeCtrl.py  36_Notebook.py  37_Grid.py  pyproject.toml
Spider/baidu/: baidu00.py  baidu01.py  baidu02.py
Spider/bot/: bot00.py  bot01.py  bot02.py  bot03.py
Spider/mting/: mting55.py
Spider/novel/: novel00.py
Spider/scmor/: scmor.js  scmor.py
WinForm/Learning/: AboutBox1.Designer.cs  AboutBox1.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Form2.resx  Form3.Designer.cs  Form3.cs  Learning.csproj  Learning.sln  MDIParent1.Designer.cs  MDIParent1.cs  MDIParent1.resx  Program.cs
WinForm/Learning/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
aardio/taichi/: default.aproj  main.aardio  readme.md
