[tool.poetry]
name = "wxpython-demo"
version = "0.1.0"
description = ""
authors = ["coco-hkk <hkkdlut@sina.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wxpython = "^4.2.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
